--- a/tasks/commands.yml
+++ b/tasks/commands.yml
@@ -15,3 +15,19 @@
   notify:
     - commit commands
   with_items: "{{ cumulus_nclu.commands }}"
+
+- name: add nclu template group commands
+  nclu:
+    template: |
+      - "{{ item }}"
+  notify:
+    - commit commands
+  with_items: "{{ cumulus_nclu.template_group_commands }}"
+
+- name: add nclu template host commands
+  nclu:
+    template: |
+      - "{{ item }}"
+  notify:
+    - commit commands
+  with_items: "{{ cumulus_nclu.template_commands }}"
